[gd_scene load_steps=12 format=2]

[ext_resource path="res://RaptorRender/GUI/Themes/grey.tres" type="Theme" id=1]
[ext_resource path="res://RaptorRender/GUI/SortableTable/SortableTable.tscn" type="PackedScene" id=2]
[ext_resource path="res://RaptorRender/GUI/InfoPanels/ClientInfoPanel/Client_Info_Panel.tscn" type="PackedScene" id=3]
[ext_resource path="res://RaptorRender/GUI/InfoPanels/JobInfoPanel/Job_Info_Panel.tscn" type="PackedScene" id=4]
[ext_resource path="res://RaptorRender/GUI/ContextMenus/Inherited Context Menus/ContextMenu_Clients.tscn" type="PackedScene" id=5]
[ext_resource path="res://RaptorRender/GUI/ContextMenus/Inherited Context Menus/ContextMenu_Jobs.tscn" type="PackedScene" id=6]
[ext_resource path="res://RaptorRender/GUI/ContextMenus/Inherited Context Menus/ContextMenu_Chunks.tscn" type="PackedScene" id=7]
[ext_resource path="res://RaptorRender/GUI/ContextMenus/Inherited Context Menus/ContextMenu_Log.tscn" type="PackedScene" id=8]
[ext_resource path="res://RaptorRender/GUI/AutoScalingPopup/AutoScalingPopupBase.tscn" type="PackedScene" id=9]
[ext_resource path="res://RaptorRender/GUI/NotificationSystem/NotificationSystem.tscn" type="PackedScene" id=10]
[ext_resource path="res://RaptorRender/GUI/ClientsTabContainer.gd" type="Script" id=11]

[node name="GUI" type="Node"]

[node name="BackgroundColor" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.14902, 0.14902, 0.14902, 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainHSplitContainer" type="HSplitContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MainVSplitContainer" type="VSplitContainer" parent="Control/MainHSplitContainer"]
margin_right = 910.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TabContainerJobs" type="TabContainer" parent="Control/MainHSplitContainer/MainVSplitContainer"]
margin_right = 910.0
margin_bottom = 296.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0

[node name="Jobs" type="Tabs" parent="Control/MainHSplitContainer/MainVSplitContainer/TabContainerJobs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 29.0
margin_right = -5.0
margin_bottom = -5.0

[node name="Jobs_SortableTable" parent="Control/MainHSplitContainer/MainVSplitContainer/TabContainerJobs/Jobs" instance=ExtResource( 2 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0
table_id = "jobs"

[node name="TabContainerClients" type="TabContainer" parent="Control/MainHSplitContainer/MainVSplitContainer"]
margin_top = 304.0
margin_right = 910.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0
script = ExtResource( 11 )

[node name="All Clients" type="Tabs" parent="Control/MainHSplitContainer/MainVSplitContainer/TabContainerClients"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 29.0
margin_right = -5.0
margin_bottom = -5.0

[node name="Clients_SortableTable" parent="Control/MainHSplitContainer/MainVSplitContainer/TabContainerClients/All Clients" instance=ExtResource( 2 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0
row_color_yellow = Color( 0.346293, 0.352941, 0.231373, 1 )
row_color_black = Color( 0.117188, 0.117188, 0.117188, 1 )
table_id = "clients"

[node name="PanelContainer" type="PanelContainer" parent="Control/MainHSplitContainer"]
margin_left = 918.0
margin_right = 1280.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4

[node name="Panel" type="Panel" parent="Control/MainHSplitContainer/PanelContainer"]
margin_left = 6.0
margin_top = 4.0
margin_right = 356.0
margin_bottom = 596.0

[node name="ClientInfoPanel" parent="Control/MainHSplitContainer/PanelContainer/Panel" instance=ExtResource( 3 )]
visible = false
margin_right = 0.0

[node name="JobInfoPanel" parent="Control/MainHSplitContainer/PanelContainer/Panel" instance=ExtResource( 4 )]
visible = false
margin_right = 0.0

[node name="ContextMenu_Clients" parent="Control" instance=ExtResource( 5 )]

[node name="ContextMenu_Jobs" parent="Control" instance=ExtResource( 6 )]

[node name="ContextMenu_Chunks" parent="Control" instance=ExtResource( 7 )]
context_menu_id = "chunks"

[node name="ContextMenuBase" parent="Control" instance=ExtResource( 8 )]

[node name="SubmitJobPopup" parent="Control" instance=ExtResource( 9 )]
visible = false
popup_id = "submit_job"
title = "POPUP_SUBMIT_JOB_1"
ok_button_string = "POPUP_SUBMIT_JOB_1"
margin_left_percent = 25.0
margin_right_percent = 25.0
margin_top_percent = 10.0
margin_bottom_percent = 10.0

[node name="NotificationSystem" parent="." instance=ExtResource( 10 )]
[connection signal="tab_changed" from="Control/MainHSplitContainer/MainVSplitContainer/TabContainerClients" to="Control/MainHSplitContainer/MainVSplitContainer/TabContainerClients" method="_on_TabContainerClients_tab_changed"]
